[package]
name = "lenguages_de_marcas_projecto"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = {version = "0.20.0", features = ["csr"]} # need to add yew this way
wasm-bindgen-futures = "0.4.34"
wasm-bindgen = "0.2.84"
reqwasm = {version = "0.5.0", features = ["json"]}
serde_json = "1.0.95"
gloo = "0.8.0"
web-sys = {version = "0.3.61", features=["HtmlInputElement"]}
